feat(product): introduce simple product

--- a/core/views/custom-type/products/index.ejs
+++ b/core/views/custom-type/products/index.ejs
@@ -5,49 +5,46 @@
 <% if (data.length === 0) { %>
     <h2>No content</h2>
 <% } else { %>
-    <div class="posts-list" data-custom-table>
-        <div class="posts-list__inner">
-            <div class="posts-list__heading" data-column-wrapper="heading">
-                <div class="posts__list--title" data-column="Title">Title</div>
-                <div class="posts__list--author" data-column="Author">Author</div>
-                <div class="posts__list--state" data-column="State">State</div>
-                <div class="posts__list--categories" data-column="Categories">Categories</div>
-                <div class="posts__list--date" data-column="Date">Last Update</div>
+    <div class="products-list" data-custom-table>
+        <div class="products-list__inner">
+            <div class="products-list__heading" data-column-wrapper="heading">
+                <div class="products__list--name" data-column="Name">Name</div>
+                <div class="products__list--sku" data-column="SKU">SKU</div>
+                <div class="products__list--price" data-column="Price">Price</div>
+                <div class="products__list--categories" data-column="Categories">Categories</div>
+                <div class="products-list--status" data-column="Status">Status</div>
+                <div class="products__list--published-time" data-column="Published Time">Published Time</div>
             </div>
 
-            <% data.forEach(post => { %>
+            <% data.forEach(product => { %>
 
                 <%
-                    const viewURL = isSpecialType ? '/' + post.url : '/' + type + '/' + post.url;
+                    const viewURL = isSpecialType ? '/' + product.url : '/' + type + '/' + product.url;
                 %>
 
-                <div class="posts-list__item" data-column-wrapper="item">
-                    <div class="posts__item--title not-show-title" data-column="Title">
-                        <a href="?post_type=<%= contentType; %>&action=edit&id=<%= post.id; %>"
-                           class="posts__item--link"><%= post.title; %></a>
-                        <div class="posts__item--utils">
-                            <a href="?post_type=<%= contentType; %>&action=edit&id=<%= post._id; %>"
-                               class="posts__item--link">Edit</a>
-                            <a href="<%= viewURL; %>" target="_blank" class="posts__item--link">View</a>
-                            <a href="?post_type=<%= contentType; %>&method=post&action=delete&id=<%= post._id; %>"
-                               class="posts__item--link trash">Trash</a>
+                <div class="products-list__item" data-column-wrapper="item">
+                    <div class="products__item--title not-show-name" data-column="Name">
+                        <a href="?post_type=<%= contentType; %>&action=edit&id=<%= product.id; %>"
+                           class="products__item--link"><%= product.name; %></a>
+                        <div class="products__item--utils">
+                            <a href="?post_type=<%= contentType; %>&action=edit&id=<%= product._id; %>"
+                               class="products__item--link">Edit</a>
+                            <a href="<%= viewURL; %>" target="_blank" class="products__item--link">View</a>
+                            <a href="?post_type=<%= contentType; %>&method=post&action=delete&id=<%= product._id; %>"
+                               class="products__item--link trash">Trash</a>
                         </div>
                     </div>
 
-                    <div class="posts__item--author <%= post.author ? 'post__item--author-active' : 'post__item--author-deleted' %>"
-                         data-column="Author"><%= post.author ? `${post.author.name}` : `${post.authorName}` %></div>
-                    <div class="posts__item--status" data-title="Visibility"
-                         data-column="State"><%= post.visibility === 'private' ? 'Private' : 'Published'; %></div>
-                    <div class="posts__item--categories" data-column="Categories">Categories</div>
-                    <div class="posts__item--date not-show-title" data-column="Date">
-                        <time data-title="Date"><%= post.publishFormatted %></time>
-                    </div>
-                    <div class="posts__item--utils">
-                        <a href="?post_type=<%= contentType; %>&action=edit&id=<%= post._id; %>"
-                           class="posts__item--link">Edit</a>
-                        <a href="<%= viewURL; %>" target="_blank" class="posts__item--link">View</a>
-                        <a href="?post_type=<%= contentType; %>&method=post&action=delete&id=<%= post._id; %>"
-                           class="posts__item--link trash">Trash</a>
+                    <div class="products__item--sku"
+                         data-column="SKU"><%= product.inventory %></div>
+                    <div class="products__item--price"
+                         data-column="Price"><%= product.price %></div>
+                    <div class="products__item--categories" data-column="Categories">Categories</div>
+                    <div class="products__item--status" data-title="Visibility"
+                         data-column="State"><%= product.visibility === 'private' ? 'Private' : 'Published'; %></div>
+
+                    <div class="products__item--date not-show-title" data-column="Date">
+                        <time data-title="Date"><%= product.publishFormatted %></time>
                     </div>
                 </div>
             <% }); %>
